fix lints in SimpleTableDemo